// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`running command handler with a valid config generates expected log messages 1`] = `
Object {
  "custom": Array [],
  "error": Array [],
  "info": Array [
    Array [
      "Config: Read from URL: https://raw.githubusercontent.com/github-organization/github-apps-config/master/valid.json
",
    ],
  ],
  "message": Array [],
  "success": Array [
    Array [
      "Config is valid",
    ],
  ],
  "warning": Array [],
}
`;

exports[`running command handler with an invalid config generates expected log messages 1`] = `
Object {
  "custom": Array [],
  "error": Array [
    Array [
      "ERROR: Config#load: The config is invalid:

- 'installations.0.id' is the wrong type (value: \\"incorrect value\\")",
    ],
  ],
  "info": Array [],
  "message": Array [],
  "success": Array [],
  "warning": Array [],
}
`;
